<resources>
    <string name="app_name">FAST FOOD</string>

    <string name="btn_sandwiches">SANDWICHES</string>
    <string name="btn_sobreNosotros">SOBRE NOSOTROS</string>
    <string name="btn_italiano">ITALIANO</string>
    <string name="btn_chacarero">CHACARERO</string>
    <string name="btn_barrosLucos">BARROS LUCOS</string>
    <string name="btn_campestre">CAMPESTRE</string>
    <string name="btn_aLoPobre">A LO POBRE</string>
    <string name="btn_volver">VOLVER</string>

    <string name="sobre_nosotros">Somos un local comprometido con sus clientes, con una misión clara; Brindar los mejores sandwich del país.</string>



    <string name="nombre_italiano">SANDWICH ITALIANO</string>
    <string name="nombre_chacarero">SANDWICH CHACARERO</string>
    <string name="nombre_barrosLucos">SANDWICH BARROS LUCOS</string>
    <string name="nombre_campestre">SANDWICH CAMPESTRE</string>
    <string name="nombre_aLoPobre">SANDWICH A LO POBRE</string>


    <string name="detail_italiano">CONTIENE 400 GRAMOS DE BISTEC DE POSTA ROSADA, 2 PALTAS GRANDECITAS, TOMATE, MAYONESA QUE REPOSAN SOBRE DOS PANES FRICA</string>
    <string name="detail_chacarero">CONTIENE 400 GRAMOS DE BISTEC DE POSTA ROSADA, POROTOS VERDES, TOMATE GRANDE, SAL, PIMIENTA  Y MANTEQUILLA QUE REPOSAN SOBRE DOS PANES FRICA</string>
    <string name="detail_barrosLuco">CONTIENE 400 GRAMOS DE BISTEC DE POSTA ROSADA, 4 REBANADAS DE QUESO CHANCO O CAMPO Y MANTEQUILLA QUE REPOSAN SOBRE DOS PANES FRICA</string>
    <string name="detail_campestre">CONTIENE 400 GRAMOS DE BISTEC DE POSTA ROSADA, 2 REBANADAS DE TOMATE, 2 TROZOS DE LECHUGA Y UNA RICA MAYONESA</string>
    <string name="detail_aLoPobre">CONTIENE 400 GRAMOS DE BISTEC DE POSTA ROSADA, RICAS CEBOLLAS ACARAMELIZADAS, CON UNAS PAPAS FRITAS EN SU PUNTO Y UN HUEVO FRITO SABROSO</string>

    <string name="precio_italiano">PRECIO: $5.000</string>
    <string name="precio_chacarero">PRECIO: $3.500</string>
    <string name="precio_barrosLucos">PRECIO: $3.000</string>
    <string name="precio_campestre">PRECIO: $4.000</string>
    <string name="precio_aLoPobre">PRECIO: $4.500</string>


</resources>
